initial working helm and docker